[bug 1304086] Update home page link styles
Variant A was the clear winner; make it permanent and clean up the test code.

--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -39,13 +39,8 @@
   {% endif %}
 {% endblock %}
 
-{% block experiments %}
-  {% if switch('experiment-home-links') %}
-     {% javascript 'experiment-home-links' %}
-  {% endif %}
-{% endblock %}
-
 {% block site_header %}
+{% include 'mozorg/home/includes/home-icons-sprite.svg' %}
 <header class="section masthead" id="masthead">
   <div class="content">
     <h1 class="masthead-logo">
@@ -122,13 +117,17 @@
         {% endblock %}
         </p>
 
-        {% block people_links %}
         <ul id="icon-links-who" class="icon-links">
-          <li id="encryption"><a rel="external" href="https://advocacy.mozilla.org/encrypt/">{{ _('Stand Up For Encryption') }}</a></li>
-          <li id="teachtheweb"><a rel="external" href="https://learning.mozilla.org/">{{ _('Teach The Web') }}</a></li>
-          <li id="leandata"><a href="{{ url('mozorg.about.policy.lean-data') }}">{{ _('Try the Lean Data Toolkit') }}</a></li>
+          <li id="encryption">
+            <a rel="external" href="https://advocacy.mozilla.org/encrypt/"><svg class="icon"><use xlink:href="#icon-encryption"></use></svg>{{ _('Stand Up For Encryption') }}</a>
+          </li>
+          <li id="teachtheweb">
+            <a rel="external" href="https://learning.mozilla.org/"><svg class="icon"><use xlink:href="#icon-teachtheweb"></use></svg>{{ _('Teach The Web') }}</a>
+          </li>
+          <li id="leandata">
+            <a href="{{ url('mozorg.about.policy.lean-data') }}"><svg class="icon"><use xlink:href="#icon-leandata"></use></svg>{{ _('Try the Lean Data Toolkit') }}</a>
+          </li>
         </ul>
-        {% endblock %}
       </div>
     </section>
 
@@ -149,14 +148,20 @@
         {% endblock %}
         </p>
 
-        {% block innovation_links %}
         <ul id="icon-links-innovate" class="icon-links">
-          <li id="gaming"><a rel="external" href="https://games.mozilla.org/">{{ _('Gaming on the Web') }}</a></li>
-          <li id="vr"><a rel="external" href="https://aframe.io/">{{ _('Virtual Reality Platform') }}</a></li>
-          <li id="servo"><a rel="external" href="https://servo.org/">{{ _('Servo') }}</a></li>
-          <li id="rust"><a rel="external" href="https://www.rust-lang.org/">{{ _('Rust') }}</a></li>
+          <li id="gaming">
+            <a rel="external" href="https://games.mozilla.org/"><svg class="icon"><use xlink:href="#icon-gaming"></use></svg>{{ _('Gaming on the Web') }}</a>
+          </li>
+          <li id="vr">
+            <a rel="external" href="https://aframe.io/"><svg class="icon"><use xlink:href="#icon-vr"></use></svg>{{ _('Virtual Reality Platform') }}</a>
+          </li>
+          <li id="servo">
+            <a rel="external" href="https://servo.org/"><svg class="icon"><use xlink:href="#icon-servo"></use></svg>{{ _('Servo') }}</a>
+          </li>
+          <li id="rust">
+            <a rel="external" href="https://www.rust-lang.org/"><svg class="icon"><use xlink:href="#icon-rust"></use></svg>{{ _('Rust') }}</a>
+          </li>
         </ul>
-        {% endblock %}
       </div>
     </section>
   </section>{#-- /#who-innovate-wrapper --#}
