[fix bug 1322704] Remove secure_url helper.

--- a/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/join.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/studentambassadors/join.html
@@ -29,7 +29,7 @@
 
 {% block billboardcontent %}
   <form method="POST" class="billboard {% if form.non_field_errors() or form.errors %}has-errors{% endif %}"
-        id="ambassadors-form" action="{{ secure_url() }}#ambassadors-form">
+        id="ambassadors-form" action="{{ url('mozorg.contribute.studentambassadors.join') }}#ambassadors-form">
     {{ csrf() }}
     <input type="hidden" name="source_url" value="{{ request.build_absolute_uri() }}">
       <div class="form-column">
