[fix Bug 1313032] - highlight the target element on the forums page

--- a/media/css/mozorg/about-forums.less
+++ b/media/css/mozorg/about-forums.less
@@ -18,10 +18,15 @@
     & > li {
         list-style-type: none;
         border-top: 1px dotted @borderColor;
-        padding: 10px 0;
-        margin: 0;
+        padding: 10px 20px;
+        margin: 0 -20px;
         .clearfix();
     }
+
+    & > li:target{
+        background: #fff9c4;
+    }
+    
     .summary {
         .span(5);
         margin-left: 0;
