--- a/media/css/newsletter/newsletter-developer.scss
+++ b/media/css/newsletter/newsletter-developer.scss
@@ -4,47 +4,28 @@
 
 @import '../pebbles/includes/lib';
 
-
-$color-fox-purple: #3a304b;
-
 .section-intro {
-    background-color: $color-fox-purple;
+    background: url('/media/img/newsletter/developer/heart.svg') top 30px center no-repeat,
+                url('/media/img/newsletter/developer/grid.svg') top left repeat,
+                #0c99d5;
+    @include background-size(200px 199px, 60px 60px);
+    height: 230px;
+    width: 100%;
 
-    .content {
-        @include background-size(141px 157px, 153px 115px);
-        background-image: url('/media/img/newsletter/firefox/mailbox.svg'),
-                          url('/media/img/newsletter/firefox/fox-tail.svg');
-        background-position: bottom -40px left 10px, bottom -45px right -10px;
-        background-repeat: no-repeat, no-repeat;
-        height: 167px;
-        width: $width-phone;
+    @media #{$mq-phone-wide} {
+        @include background-size(260px 258px, 80px 80px);
+        height: 290px;
+    }
 
-        @media #{$mq-phone-wide} {
-            @include background-size(215px 239px, 230px 173px);
-            background-position: bottom -60px left, bottom -65px right;
-            height: 229px;
-            width: $width-phone-wide;
-        }
+    @media #{$mq-tablet} {
+        @include background-size(320px 318px, 90px 90px);
+        background-position: top 20px center, top left;
+        height: 340px;
+    }
 
-        @media #{$mq-tablet} {
-            @include background-size(300px 333px, 320px 241px);
-            background-position: bottom -90px left 40px, bottom -90px right 40px;
-            height: 290px;
-            width: $width-tablet;
-        }
-
-        @media #{$mq-desktop} {
-            @include background-size(381px 423px, 428px 322px);
-            background-position: bottom -100px left 60px, bottom -120px right 60px;
-            height: 370px;
-            width: $width-desktop;
-        }
-
-        @media #{$mq-desktop} and #{$mq-short} {
-            @include background-size(300px 333px, 320px 241px);
-            background-position: bottom -90px left 160px, bottom -90px right 140px;
-            height: 290px;
-        }
+    @media #{$mq-tablet} and #{$mq-short} {
+        @include background-size(260px 258px, 80px 80px);
+        height: 290px;
     }
 
     #tabzilla {
@@ -60,17 +41,17 @@ $color-fox-purple: #3a304b;
 
     h1 {
         @include font-size(32px);
-        color: $color-fox-purple;
+        color: #005189;
         text-align: center;
     }
 
     h2 {
         @include font-size(18px);
-        color: $color-fox-purple;
+        color: #005189;
         font-weight: normal;
         line-height: 1.3;
         margin: 20px auto 40px;
-        max-width: 24em;
+        max-width: 32em;
         text-align: center;
     }
 
@@ -98,7 +79,6 @@ $color-fox-purple: #3a304b;
         }
         h2 {
             @include font-size(24px);
-            max-width: none;
         }
     }
 }
@@ -122,12 +102,12 @@ $color-fox-purple: #3a304b;
 
     input[type='text'],
     input[type='email'] {
-        border: 2px solid $color-mozblue;
+        border: 2px solid #229ad3;
         margin-bottom: 2px;
 
         &:hover,
         &:focus {
-            border-color: saturate(lighten($color-mozblue, 5%), 10%);
+            border-color: saturate(lighten(#229ad3, 5%), 10%);
         }
     }
 
@@ -156,6 +136,11 @@ $color-fox-purple: #3a304b;
         margin-top: 40px;
         text-align: center;
 
+        .form-button {
+            border-color: #229ad3;
+            color: #229ad3;
+        }
+
         small {
             @include font-size(12px);
         }
@@ -171,13 +156,13 @@ $color-fox-purple: #3a304b;
 
     h3 {
         @include font-size(32px);
-        color: $color-fox-purple;
+        color: #005189;
         margin-bottom: 20px;
     }
 
     p {
         @include font-size(18px);
-        color: $color-fox-purple;
+        color: #005189;
     }
 
     @media #{$mq-tablet} {
