--- a/media/css/pebbles/components/_masthead.scss
+++ b/media/css/pebbles/components/_masthead.scss
@@ -157,3 +157,17 @@
         }
     }
 }
+
+html[dir="rtl"] .masthead-nav-main {
+    left: auto;
+    right: 0;
+
+    .nav-main-menu {
+        a:active,
+        a:focus,
+        a:hover {
+            border-right: none;
+            border-left: 6px solid $color-mozred;
+        }
+    }
+}
