--- a/bedrock/mozorg/templates/mozorg/technology.html
+++ b/bedrock/mozorg/templates/mozorg/technology.html
@@ -20,40 +20,7 @@
 {% endblock %}
 
 {% block site_header %}
-<header id="masthead">
-  <div class="content">
-    <h1 class="masthead-logo">
-      <a href="{{ url('mozorg.home') }}">
-        <img src="{{ static('img/mozorg/template/mozilla-wordmark.svg') }}" alt="Mozilla">
-      </a>
-    </h1>
-    {{ download_firefox(alt_copy=_('Download Firefox'), dom_id='nav-download-firefox') }}
-    <nav id="nav-main" class="masthead-nav-main">
-      <span class="toggle" role="button" aria-controls="nav-main-menu" aria-expanded="false" tabindex="0">{{ _('Menu') }}</span>
-      <ul id="nav-main-menu" class="nav-main-menu">
-        <li class="first">
-          <a href="{{ url('mozorg.about') }}" data-link-type="nav" data-link-name="About">{{ _('About') }}</a>
-        </li>
-        {% if LANG.startswith('en-') %}
-        <li class="technology-item">
-          {# L10n: these strings are both potential navigation labels #}
-          <a href="{{ url('mozorg.technology') }}" data-link-type="nav" data-link-name="Web Innovations" data-alt-text="{{ _('Innovations') }}">{{ _('Web Innovations') }}</a>
-        </li>
-        {% else %}
-        <li class="contribute-item">
-          <a href="{{ url('mozorg.contribute.index') }}" data-link-type="nav" data-link-name="Participate">{{_('Participate')}}</a>
-        </li>
-        {% endif %}
-        <li>
-          <a href="{{ url('firefox.family.index') }}" data-link-type="nav" data-link-name="Firefox">{{ _('Firefox') }}</a>
-        </li>
-        <li>
-          <a rel="external" href="{{ donate_url('header') }}" data-link-type="nav" data-link-name="Donate">{{ _('Donate') }}</a>
-        </li>
-      </ul>
-    </nav>
-  </div>
-</header>
+  {% include 'mozorg/home/includes/nav.html' %}
 {% endblock %}
 
 {% block content %}
