--- a/media/css/mozorg/home/home.scss
+++ b/media/css/mozorg/home/home.scss
@@ -551,9 +551,7 @@ main {
         background: url('/media/img/firefox/horizon/stars.svg') center 60px no-repeat;
     }
 
-    .foreground .content {
-        padding-bottom: 60px;
-
+    .content {
         p {
             margin-bottom: 40px;
         }
@@ -569,7 +567,7 @@ main {
     }
 
     .forest-container {
-        height: 483px;
+        height: 416px;
         margin-top: -254px;
         position: relative;
     }
