--- a/bedrock/newsletter/templates/newsletter/developer.html
+++ b/bedrock/newsletter/templates/newsletter/developer.html
@@ -7,6 +7,7 @@
 {% set_lang_files "mozorg/newsletters" %}
 
 {% block page_title %}{{ _('Love the web? So do we!') }}{% endblock page_title %}
+{% block page_desc %}{{ _('Join thousands of developers like you who are learning the best of web development.') }}{% endblock %}
 
 {% block body_class %}newsletter-developer{% endblock %}
 
@@ -34,7 +35,7 @@
     <div class="content">
       <header class="header-main" role="banner">
         <h1 class="page-title">{{ self.page_title() }}</h1>
-        <h2 class="section-title">{{ _('Join thousands of developers like you who are learning the best of web development.') }} {{ _('If you don’t like the Mozilla developer newsletter, you can easily unsubscribe (but we think you’ll like it).') }}</h2>
+        <h2 class="section-title">{{ self.page_desc() }} {{ _('If you don’t like the Mozilla developer newsletter, you can easily unsubscribe (but we think you’ll like it).') }}</h2>
       </header>
       {{ email_newsletter_form(newsletters='app-dev', include_language=False, include_title=False, spinner_color='#0c99d5', button_class='hollow') }}
     </div>
