[fix bug 1316576] Email field placeholder text on homepage difficult to read

--- a/media/css/newsletter/moznewsletter-subscribe.less
+++ b/media/css/newsletter/moznewsletter-subscribe.less
@@ -198,17 +198,17 @@
         }
 
         ::-webkit-input-placeholder {
-           color: #ccc;
+           color: #333;
            font-weight: normal;
         }
 
         ::-moz-placeholder {
-           color: #ccc;
+           color: #333;
            font-weight: normal;
         }
 
         :-ms-input-placeholder {
-           color: #ccc;
+           color: #333;
            font-weight: normal;
         }
     }
