--- a/bedrock/mozorg/templates/mozorg/home/home-voices.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-voices.html
@@ -359,6 +359,14 @@
   <button id="scroll-prompt">{{ _('Discover more') }}</button>
 </main>
 
+{% if l10n_has_tag('mozorg-home-fundraising-2016') and switch('mozorg-home-fundraising-2016') %}
+  {% block home_takeover %}
+    {% with variant = 'takeoverVoices' %}
+      {% include 'mozorg/home/includes/takeover-2016.html' %}
+    {% endwith %}
+  {% endblock %}
+{% endif %}
+
 {% include 'firefox/includes/schemaorg-app.html' %}
 
 {% endblock %}
