--- a/media/css/privacy/privacy.less
+++ b/media/css/privacy/privacy.less
@@ -203,6 +203,10 @@
       background-position: left -320px;
     }
 
+    &.policy-firefox-focus a:before {
+      background-position: left -360px;
+    }
+
     &.policy-thunderbird a:before {
       background-position: left -280px;
     }
