[fix bug 1319158] Change link on /internet-health/ page

--- a/bedrock/mozorg/templates/mozorg/internet-health.html
+++ b/bedrock/mozorg/templates/mozorg/internet-health.html
@@ -29,8 +29,7 @@
         {% trans %}
           At Mozilla, we see the Internet as our largest shared global resource.
           The healthier it is, the more it benefits everyone. We can all be a
-          part of keeping the Internet open, safe and accessible. Here’s how we
-          can all be a part of keeping the Internet open, safe and accessible.
+          part of keeping the Internet open, safe and accessible.
         {% endtrans %}
         </p>
       </header>
@@ -114,7 +113,7 @@
 
           <ul class="ctas">
             <li>
-              <a rel="external" href="http://tech.newstatesman.com/guest-opinion/digital-empires">{{ _('Read more from Mozilla Foundation’s Mark Surman') }}</a>
+              <a rel="external" href="https://blog.mozilla.org/internetcitizen/2016/11/15/rise-digital-empires/">{{ _('Read more from Mozilla Foundation’s Mark Surman') }}</a>
             </li>
           </ul>
         </div>
