Bug 1319685 - Internet Health landing page: Expose description as a single string

--- a/bedrock/mozorg/templates/mozorg/internet-health.html
+++ b/bedrock/mozorg/templates/mozorg/internet-health.html
@@ -6,7 +6,7 @@
 
 {% block page_title %}{{ _('Keeping the Internet healthy') }}{% endblock %}
 
-{% block page_desc %}{{ _('The Internet is our largest shared global resource.') }} {{ _('Help us keep it healthy, open and safe.') }}{% endblock %}
+{% block page_desc %}{{ _('The Internet is our largest shared global resource. Help us keep it healthy, open and safe.') }}{% endblock %}
 
 {% block body_id %}internet-health{% endblock %}
 {% block body_class %}{% endblock %}
