[bug 1319244] test Activist cross-site search

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -8,6 +8,24 @@
 
 {% set body_id = "index" %}
 
+{% block experiments %}
+  {% if LANG.startswith('en-') and switch('experiment-search-activist') %}
+    {% javascript 'experiment-search-activist' %}
+  {% endif %}
+{% endblock %}
+
+{% block js %}
+  {% if version == 'b' and switch('mozorg-search-activist') %}
+    {% javascript 'search-activist' %}
+  {% endif %}
+{% endblock %}
+
+{% block search %}
+  {% if version == 'b' and switch('mozorg-search-activist') %}
+    {% include 'includes/google-search-activist.html' %}
+  {% endif %}
+{% endblock %}
+
 {% block article_header %}
   <p>
     {% trans url_manifesto=url('mozorg.about.manifesto') %}
