--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -17,6 +17,12 @@
 
 {% block body_id %}manifesto-landing{% endblock %}
 
+{% block experiments %}
+  {% if LANG.startswith('en-') and switch('experiment-search-activist') %}
+    {% javascript 'experiment-search-activist' %}
+  {% endif %}
+{% endblock %}
+
 {% block string_data %}
   data-principle-read-more='{{ _('See more…') }}'
   data-principle-nav-prev='{{ _('Previous principle') }}'
@@ -52,9 +58,16 @@
 <main role="main">
   <article role="article" itemscope itemtype="http://schema.org/Article">
     <header id="main-feature">
-      <h1 itemprop="name">{{ self.page_title() }}</h1>
-      <p itemprop="description">{{ self.page_desc() }}</p>
+      <div class="content">
+        <h1 itemprop="name">{{ self.page_title() }}</h1>
+        <p itemprop="description">{{ self.page_desc() }}</p>
+      </div>
     </header>
+
+  {% if version == 'b' and switch('mozorg-search-activist') %}
+    {% include 'includes/google-search-activist.html' %}
+  {% endif %}
+
     <div id="main-content">
       <div id="main-content-inner">
         <section id="sec-principles" itemprop="articleBody">
@@ -325,6 +338,10 @@
     {% javascript 'matchmedia_addlistener' %}
   <![endif]-->
   {% javascript 'manifesto' %}
+
+  {% if version == 'b' and switch('mozorg-search-activist') %}
+    {% javascript 'search-activist' %}
+  {% endif %}
 {% endblock %}
 
   {#- End the redesigned landing page -#}
