--- a/media/css/mozorg/about.less
+++ b/media/css/mozorg/about.less
@@ -24,6 +24,7 @@
     background: url('/media/img/newsletter/intro-mozsummit-2000.jpg') center bottom no-repeat;
     .background-size(cover);
     padding-top: 300px;
+    position: relative;
 
     @media only screen and (min-width: @breakDesktopWide) {
         background-image: url('/media/img/newsletter/intro-mozsummit-3000.jpg');
@@ -55,6 +56,12 @@
         display: block;
         padding: 0 10px;
     }
+
+    .moz-search {
+        position: absolute;
+        top: 0;
+    }
+
 }
 
 .content-main {
