--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -30,6 +30,7 @@
 {% block content %}
   <main>
     <header class="page-header">
+      {% block search %}{% endblock %}
       <h1><span class="content">{{ _('The Mozilla Foundation') }}</span></h1>
     </header>
     <section>
