--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -35,6 +35,7 @@
     background: url('/media/img/foundation/banner/foundation_hero-image-small.jpg') center bottom no-repeat;
     .background-size(cover);
     padding-top: 300px;
+    position: relative;
 
     @media only screen and (min-width: @breakDesktop) {
         background-image: url('/media/img/foundation/banner/foundation_hero-image-large.jpg');
@@ -65,6 +66,11 @@
         .border-box;
         display: block;
         padding: 0 10px;
+    }
+
+    .moz-search {
+        position: absolute;
+        top: 0;
     }
 }
 
