--- a/media/css/firefox/new/scene1.less
+++ b/media/css/firefox/new/scene1.less
@@ -100,10 +100,17 @@ html.firefox-latest {
         display: block;
     }
 
-    /* hide download button and benefits */
-    #benefits,
-    #download-buttons {
+    /* hide benefits */
+    #benefits {
         display: none;
+    }
+
+    #download-buttons {
+        margin: @baseLine 0 0;
+    }
+
+    .latest-links-wrapper {
+        padding-top: @baseLine * 2;
     }
 }
 
@@ -149,7 +156,6 @@ html.android {
 
         #version-message-desktop-latest,
         #download-button-wrapper-desktop,
-        #download-button-wrapper-mobile,
         .desktop-latest-links-wrapper {
             display: none;
         }
@@ -189,7 +195,21 @@ html.linux.arm {
 
     &.firefox-latest {
         #version-message-linux-arm {
-            display: none;
+            display: block;
+            margin-bottom: @baseLine;
+        }
+
+        &.show-refresh {
+            #refresh-firefox-wrapper {
+                float: none;
+                margin-bottom: @baseLine;
+                text-align: center;
+                width: 100%;
+            }
+        }
+
+        .latest-links-wrapper {
+            padding-top: 0;
         }
     }
 
@@ -232,53 +252,62 @@ html.ios {
 }
 
 html.show-refresh {
-    #refresh-firefox-wrapper {
+
+    .main-content {
+        .clearfix;
+    }
+
+    #download-buttons {
+        .border-box;
         display: block;
-        margin: (@baseLine * 2) 0 @baseLine;
+        float: left;
+        margin-top: 0;
+        padding-right: 10px;
+        text-align: right;
+        width: 50%;
+    }
 
-        h2 {
-            .font-size(60px);
-            line-height: 1.2;
-            margin-bottom: @baseLine;
+    #refresh-firefox-wrapper {
+        .border-box;
+        display: block;
+        float: right;
+        margin: 0;
+        padding-left: 10px;
+        text-align: left;
+        width: 50%;
 
-            @media only screen and (max-width: @breakDesktop) {
-                .font-size(55px);
-            }
-
-            @media only screen and (max-width: @breakTablet) {
-                .font-size(36px);
-            }
-
-            @media only screen and (max-width: @breakMobileLandscape) {
-                .font-size(30px);
-            }
-        }
-
-        p {
-            .font-size(@largeFontSize);
-            font-style: normal;
-            margin-bottom: @baseLine / 2;
+        .refresh-inner-wrapper {
+            display: inline-block;
+            text-align: center;
         }
 
         a {
             .font-size(@largeFontSize);
-            .trailing-arrow();
             color: #fff;
             font-style: normal;
+            line-height: 1.3;
         }
     }
 
     #refresh-firefox {
-        .font-size(22px);
         display: block;
-        font-weight: normal;
-        margin: 0 auto (@baseLine / 2);
-        padding: 15px;
-        width: 260px;
+        margin-bottom: 10px;
+        line-height: 1.4;
     }
 
-    .hide-for-refresh {
-        display: none;
+    .latest-links-wrapper {
+        clear: both;
+    }
+
+    @media only screen and (max-width: @breakTablet) {
+        #download-buttons,
+        #refresh-firefox-wrapper {
+            float: none;
+            margin-bottom: @baseLine * 2;
+            padding: 0;
+            text-align: center;
+            width: 100%;
+        }
     }
 }
 
@@ -341,10 +370,6 @@ html.show-refresh {
         .mobile,
         .desktop {
             display: none;
-        }
-
-        &.firefox-latest .android-latest-links-wrapper {
-            padding: 0;
         }
     }
 
