--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -120,6 +120,7 @@ body.nightly {
     }
     table {
         width: 100%;
+        table-layout: fixed;
         thead {
             th {
                 white-space: nowrap;
