--- a/bedrock/base/templates/product-all-macros.html
+++ b/bedrock/base/templates/product-all-macros.html
@@ -69,8 +69,12 @@
 
 {% macro build_row(platforms, build) %}
   <tr id="{{ build.locale }}" data-search="{{ build.name_en|lower }}, {{ build.name_native|lower }}">
-    <th scope="row">{{ build.name_en }}</th>
-    <td lang="{{ build.locale }}">{{ build.name_native }}</td>
+    {% if build.name_native %}
+      <th scope="row">{{ build.name_en }}</th>
+      <td lang="{{ build.locale }}">{{ build.name_native }}</td>
+    {% else %}
+      <th colspan="2" scope="row">{{ build.name_en }}</th>
+    {% endif %}
     {% for p_name, p_label in platforms %}
       {{ build_link(build, p_name, _('Download for %(platform)s in %(locale)s')|format(platform=p_label|replace('\n', ' '), locale=build.name_en)) }}
     {% endfor %}
