--- a/bedrock/firefox/templates/firefox/channel/android.html
+++ b/bedrock/firefox/templates/firefox/channel/android.html
@@ -62,12 +62,16 @@
   </footer>
 </section>
 
-{# Nighly download links for Android are not yet available Bug 1241114
 <section id="nightly" class="channel">
   <div class="container">
     <header>
       <h2>{{_('Nightly')}}</h2>
-      <p>{{_('Check out new Android features in their earliest stages. Enjoy at your own risk.')}}</p>
+      {% if l10n_has_tag('android_nightly_copy') %}
+        <p>{{_('Check out new Android features in their earliest stages. Enjoy at your own risk.')}}</p>
+      {% else %}
+        {# Use the existing Nightly desktop copy as a fallback #}
+        <p>{{_('Test brand new features daily (or… nightly). Enjoy at your own risk.')}}</p>
+      {% endif %}
     </header>
     {{ download_firefox('nightly', platform='android', force_direct=True, alt_copy=_('Download'), dom_id="android-nightly-download") }}
     <p class="notice">
@@ -75,8 +79,14 @@
       <a href="{{ url('privacy.notices.firefox') + '#telemetry' }}">{{_('Learn more')}}</a>
     </p>
   </div>
+  <footer>
+    <div class="container">
+      <ul>
+        <li><a rel="external" href="https://blog.nightly.mozilla.org/">{{_('Nightly Blog')}}</a></li>
+      </ul>
+    </div>
+  </footer>
 </section>
-#}
 {% endblock %}
 
 {% block test_pilot %}{% endblock %}
