--- a/media/css/firefox/mobile-download-desktop.less
+++ b/media/css/firefox/mobile-download-desktop.less
@@ -3,83 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "../sandstone/lib.less";
-@import "horizon-lib.less";
-
-// slightly customized copy pasta from /firefox/new/horizon/common.less
-.horizon {
-    .horizon-gradient;
-}
-
-.stars {
-    background: url('/media/img/firefox/horizon/stars.svg') center 60px no-repeat;
-}
-
-.forest-container {
-    height: 483px;
-    margin-top: -254px;
-    position: relative;
-}
-
-.mountains-container {
-    height: 483px;
-    left: 50%;
-    margin-left: -885px;
-    position: absolute;
-    top: 0;
-    width: 1770px;
-
-    .layer {
-        left: 0;
-        position: absolute;
-        width: 1770px;
-    }
-}
-
-.sun {
-    height: 318px;
-    left: 50%;
-    margin-left: -161px;
-    position: absolute;
-    top: 30px;
-    width: 322px;
-}
-
-.mountains {
-    height: 482px;
-    top: 0;
-}
-
-.foreground-shape {
-    .at2x('/media/img/firefox/horizon/foreground.png', 1770px, 254px);
-    background-position: top left;
-    background-repeat: no-repeat;
-    bottom: 0;
-    height: 254px;
-}
-
-.trees-left {
-    bottom: 70px;
-    height: 602px;
-    left: -375px;
-    position: absolute;
-    width: 909px;
-}
-
-.trees-right {
-    bottom: 120px;
-    height: 550px;
-    position: absolute;
-    right: -420px;
-    width: 922px;
-}
-
-.fox {
-    bottom: 39px;
-    height: 254px;
-    position: absolute;
-    right: 140px;
-    width: 522px;
-}
+@import "horizon/lib.less";
 
 #outer-wrapper {
     background: @horizonColorForeground;
