--- a/media/css/firefox/new/scene2.less
+++ b/media/css/firefox/new/scene2.less
@@ -3,7 +3,7 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "../../sandstone/lib.less";
-@import "../horizon-lib.less";
+@import "../horizon/lib.less";
 
 .help {
     display: none;
